# mthds-cli

./: .gitignore  Dockerfile  PROGRESS.md  README.md  cloudbuild.yaml  diagnostics_report_Mthds_3_10_26.md  docker-compose.yml  implementation_plan_3_12_26_Mthds  mock_server.py  pyproject.toml  test_report_Mthds3_9_26.md  walkthrough_GCP_Mthds.md
.github/workflows/: deploy.yml
backend/: .dockerignore  .env  Dockerfile  admin_token.txt  db.sqlite3  db_test.py  db_test_clean.py  get_true.py  requirements.txt  seed.py  sync_labels.py  test_bearer.py  true_token.txt  update_labels.py  update_labels_text.py
backend/board/: api.py  models.py
backend/board/migrations/: 0001_initial.py
backend/config/: asgi.py  settings.py  urls.py
backend/frontend_build/assets/: index-B0grwA-X.js
backend/kanban/: admin.py  ai_service.py  api.py  base_models.py  consumers.py  models.py  routing.py  tests.py  views.py
backend/kanban/migrations/: 0001_initial.py  0002_board_owner_boardmember.py  0003_board_is_archived_list_is_archived_taskcard_due_date_and_more.py  0004_list_color.py  0005_taskcard_assignees_activitylog_boardlabel_and_more.py  0006_alter_boardlabel_unique_together.py  0007_alter_list_color_alter_taskcard_color_boost.py  0008_alter_list_is_archived_alter_taskcard_is_archived.py  0009_apitoken.py  0010_list_agent_state_mapping.py
backend/staticfiles/: index.html
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
mthds_cli/: __init__.py  ai_config.py  engine.py  main.py
(+26 files in other folders)
