[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mthds-cli"
version = "0.1.0"
description = "A CLI companion tool for the Mthds app."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "requests>=2.30.0",
    "keyring>=24.0.0"
]

[project.scripts]
mthds = "mthds_cli.main:app"
